feat: altera o código para o web-data-viz cadastrar usuario

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Logaritimos | Cadastro</title>
+  <title>Logaritimos</title>
 
   <script src="./js/sessao.js"></script>
 
@@ -197,9 +197,7 @@
             </div>
 
           </div>
-
-
-
+          
         </div>
 
       </div>
@@ -211,7 +209,7 @@
   <!--footer inicio-->
   <footer>
     <div>
-      <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
+      <h1>Logaritmos 2025 - TODOS OS DIREITOS RESERVADOS</h1>
     </div>
   </footer>
   <!--footer fim-->
