--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Logaritimos</title>
     <link rel="stylesheet" href="./CSS/index.css">
     <link rel="stylesheet" href="./CSS/quemsomos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -216,7 +216,7 @@
 
     <footer>
         <div>
-            <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
+            <h1>Logaritmos 2025 - TODOS OS DIREITOS RESERVADOS</h1>
         </div>
     </footer>
   </body>
