--- a/public/card.html
+++ b/public/card.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="./CSS/card.css">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
-      <title>Document</title>
+      <title>Logaritimos</title>
     </head>
 
     <body>
