--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard | Logaritmos</title>
+<title>Logaritmos</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./CSS/dashboard.css">
 <link rel="stylesheet" href="./CSS/util.css">
