--- a/public/info.html
+++ b/public/info.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./CSS/info.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     
-    <title>Document</title>
+    <title>Logaritimos</title>
 </head>
 
 <body>
