--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Logaritimos | Login</title>
+    <title>Logaritimos</title>
 
     <script src="./js/sessao.js"></script>
 
@@ -81,7 +81,7 @@
     <!--footer inicio-->
     <footer>
         <div>
-            <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
+            <h1>Logaritmos 2025 - TODOS OS DIREITOS RESERVADOS</h1>
         </div>
     </footer>
 </body>
