[fix]: Ajuste nas configurações de usuário, validações de senha e preenchimento de email, Dashboard com filtro estático e dashboards dinâmicas, login funcional e cadastro atualizado

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,6 @@
       <div class="Banner">
         <div class="Banner_container">
           <div>
-           <!-- <p>&nbsp;&nbsp;&nbsp;Na vanguarda da inovação, a Logaritmos une visão estratégica e agilidade implacável para alcançar novos horizontes.</p>  --> 
           </div>
         </div>
         
@@ -76,9 +75,9 @@
                         <img src="./assets/imagem/beatrizPina.jpeg" alt="Foto de perfil">
                     </div>
                     <p class="full-name">Beatriz Pina</p>
-                    <p class="role">Funcionario de TI</p>
+                    <p class="role">Dev Full-stack</p>
                     <p class="description">
-                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                      ÁREAS DE CONHECIMENTO: CSS, JAVASCRIPT, HTML, JAVA, INFRA, FERRAMENTAS DE GESTÃO (USER STORY / LEAN UX CANVAS)
                     </p>
                     <div class="social-container">
                         <button><a href="https://www.linkedin.com/in/beatriz-pina-78958a29b/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
@@ -90,9 +89,9 @@
                         <img src="./assets/imagem/EnzoFreitas.jpeg" alt="Foto de perfil">
                     </div>
                     <p class="full-name">Enzo de Freitas</p>
-                    <p class="role">Funcionario de TI</p>
+                    <p class="role">Dev Full-stack</p>
                     <p class="description">
-                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                        ÁREAS DE CONHECIMENTO: CSS, JAVASCRIPT, HTML, APACHE POI, CRON, INFRA
                     </p>
                     <div class="social-container">
                         <button><a href="https://www.linkedin.com/in/enzo-de-freitas-8553b6372/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
@@ -107,9 +106,9 @@
                         <img src="./assets/imagem/erickSilva.jpeg" alt="Foto de perfil">
                     </div>
                     <p class="full-name">Erick Silva</p>
-                    <p class="role">Funcionario de TI</p>
+                    <p class="role">Project Owner</p>
                     <p class="description">
-                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                      ÁREAS DE CONHECIMENTO: DOCKER, DOCKER-COMPOSE, BUCKET S3, EC2, JAVA, JAVASCRIPT, INFRA 
                     </p>
                     <div class="social-container">
                         <button><a href="https://www.linkedin.com/in/erick-silva-1078ab268/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
@@ -121,9 +120,9 @@
                         <img src="./assets/imagem/guiDias.jpg" alt="Foto de perfil">
                     </div>
                     <p class="full-name">Guilherme Dias</p>
-                    <p class="role">Funcionario de TI</p>
+                    <p class="role">Dev Full-stack</p>
                     <p class="description">
-                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                      ÁREAS DE CONHECIMENTO: FRONT_END FOCO EM ANGULAR, HTML, INFRA(ANGULAR), JAVASCRIPT, DESIGN SKILLS (WIREFRAME)
                     </p>
                     <div class="social-container">
                         <button><a href="https://www.linkedin.com/in/guilherme-dias-sp/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
@@ -137,9 +136,9 @@
                         <img src="./assets/imagem/luizCesar.png" alt="Foto de perfil">
                     </div>
                     <p class="full-name">Luiz César</p>
-                    <p class="role">Funcionario de TI</p>
+                    <p class="role">Scrum Master</p>
                     <p class="description">
-                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                      ÁREAS DE CONHECIMENTO: FERRAMENTAS DE GESTÃO, DIAGRAMAÇÃO, PRODUCT BACKLOG, INFRA, JAVASCRIPT, BANCO DE DADOS, JDBC, HTML 
                     </p>
                     <div class="social-container">
                         <button><a href="https://www.linkedin.com/in/erick-silva-1078ab268/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
@@ -151,9 +150,9 @@
                         <img src="./assets/imagem/rafaelQueiroz.jpeg" alt="Foto de perfil">
                     </div>
                     <p class="full-name">Rafael Queiroz</p>
-                    <p class="role">Funcionario de TI</p>
+                    <p class="role">Dev Full-stack</p>
                     <p class="description">
-                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                        ÁREAS DE CONHECIMENTO: FERRAMENTAS DE GESTÃO, EXCELL, JDBC, JAVASCRIPT, HTML, CSS, EC2, DOCKER 
                     </p>
                     <div class="social-container">
                         <button><a href="https://www.linkedin.com/in/rafael-queiroz-taneguti/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
