[fix]: ajustado o select de cargo com mensagem de erro desaparecida

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -98,7 +98,7 @@
               </div>
               <div class="campo" style="position: relative;">
                 <select name="cargoUsuario" id="cargoUsuario">
-                  <option value="0">Cargo</option>
+                  <option value="cargo">Cargo</option>
                   <option value="1">Gerente de Projetos</option>
                   <option value="2">Analista Financeiro</option>
                   <option value="3">Consultor de Vendas</option>
